--- a/src/components/App.css
+++ b/src/components/App.css
@@ -58,3 +58,21 @@ body, #root{
 .card{
   border: none;
 }
+
+/* //Photos */
+
+.zoom {
+  transition: transform .2s; /* Animation */
+}
+
+.zoom:hover {
+  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.zoom1 {
+  transition: transform .2s; /* Animation */
+}
+
+.zoom1:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
